stdout
compiling CircularBufferTest.cpp
CircularBufferTest.cpp:137:1: error: expected declaration before '}' token
  137 | }
      | ^
compilation terminated due to -Wfatal-errors.
make: *** [/cpputest/build/MakefileWorker.mk:520: objs/CircularBufferTest.o] Error 1
